fix: colors, font, spacing fix of textarea

--- a/_variables.scss
+++ b/_variables.scss
@@ -1,5 +1,19 @@
 
 //---------------------------  scheme ----------------------------------------------------
+$gradient-radial: radial-gradient(#001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+/* SCSS HEX */
+$rich-black-fogra-29: #001219ff;
+$blue-sapphire: #005f73ff;
+$viridian-green: #0a9396ff;
+$middle-blue-green: #94d2bdff;
+$medium-champagne: #e9d8a6ff;
+$gamboge: #ee9b00ff;
+$alloy-orange: #ca6702ff;
+$rust: #bb3e03ff;
+$rufous: #ae2012ff;
+$ruby-red: #9b2226ff;
+
+
 /* SCSS HEX */
 $charcoal: #264653ff;
 $persian-green: #2a9d8fff;
@@ -10,11 +24,14 @@ $burnt-sienna: #e76f51ff;
 
 
 // Colors ==========================
+//$color-background: $gradient-radial;
 $color-background: $charcoal;
 $color-background-keyboard:$persian-green;
 $color-hover: $burnt-sienna;
 $color-border: $sandy-brown;
 $color-font: $maize-crayola;
+$color-font-textarea: #001219;
+$color-background-textarea: #EE9B00;
 $color-CL_on: green;
 //-----------------------------------------------------------------------------------------
 
@@ -23,7 +40,8 @@ $color-CL_on: green;
 $size-border-main: 2px;
 $size-border-key: 1px;
 //------------------------------------------------------------------------------------
-
+$border-radius: 15px;
+$border-radius-key: 10px;
 //-----------------------------------------------------------------------------------
 $size-key-normal-width: 70px;
 $size-key-normal-height: 70px;
@@ -39,20 +57,6 @@ $size-keyboard-width: $size-key-normal-width*17;
 
 
 
-/* SCSS HSL */
-// $charcoal: hsla(197, 37%, 24%, 1);
-// $persian-green: hsla(173, 58%, 39%, 1);
-// $maize-crayola: hsla(43, 74%, 66%, 1);
-// $sandy-brown: hsla(27, 87%, 67%, 1);
-// $burnt-sienna: hsla(12, 76%, 61%, 1);
-
-/* SCSS RGB */
-// $charcoal: rgba(38, 70, 83, 1);
-// $persian-green: rgba(42, 157, 143, 1);
-// $maize-crayola: rgba(233, 196, 106, 1);
-// $sandy-brown: rgba(244, 162, 97, 1);
-// $burnt-sienna: rgba(231, 111, 81, 1);
-
 /* SCSS Gradient */
 // $gradient-top: linear-gradient(0deg, #264653ff, #2a9d8fff, #e9c46aff, #f4a261ff, #e76f51ff);
 // $gradient-right: linear-gradient(90deg, #264653ff, #2a9d8fff, #e9c46aff, #f4a261ff, #e76f51ff);
@@ -63,3 +67,14 @@ $size-keyboard-width: $size-key-normal-width*17;
 // $gradient-top-left: linear-gradient(225deg, #264653ff, #2a9d8fff, #e9c46aff, #f4a261ff, #e76f51ff);
 // $gradient-bottom-left: linear-gradient(315deg, #264653ff, #2a9d8fff, #e9c46aff, #f4a261ff, #e76f51ff);
 // $gradient-radial: radial-gradient(#264653ff, #2a9d8fff, #e9c46aff, #f4a261ff, #e76f51ff);
+
+/* SCSS Gradient */
+// $gradient-top: linear-gradient(0deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-right: linear-gradient(90deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-bottom: linear-gradient(180deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-left: linear-gradient(270deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-top-right: linear-gradient(45deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-bottom-right: linear-gradient(135deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-top-left: linear-gradient(225deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-bottom-left: linear-gradient(315deg, #001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
+// $gradient-radial: radial-gradient(#001219ff, #005f73ff, #0a9396ff, #94d2bdff, #e9d8a6ff, #ee9b00ff, #ca6702ff, #bb3e03ff, #ae2012ff, #9b2226ff);
